updated history - in progress

--- a/index.html
+++ b/index.html
@@ -28,50 +28,55 @@
             <tr> -->
                 <!-- <th id="screen" colspan="4"></th> -->
             </tr>
-        </thead>
-
-        <tbody id="originalTBody">
             <tr>
                 <td id="prev-screen" colspan="4"></td>
             </tr>
             <tr>
                 <td id="screen" colspan="4"></td>
             </tr>
-            <tr>
-                <td data-id="percentage">&percnt;</td>
-                <td data-id="CE">CE</td>
-                <td data-id="C">C</td>
-                <td data-id="backspace">&#9003;</td>
+        </thead>
+        <tbody id="originalTBody">
+            <!-- <tr>
+                <td id="prev-screen" colspan="4"></td>
             </tr>
             <tr>
-                <td data-id="1/x">1/<em>x</em></td>
-                <td data-id="squared"><em>x</em>&sup2;</td>
-                <td data-id="square-root">&#8730;</td>
-                <td class="operation" data-id="/">&#247;</td>
+                <td id="screen" colspan="4"></td>
+            </tr> -->
+            <tr>
+                <td class="main-body-item" data-id="percentage">&percnt;</td>
+                <td class="main-body-item" data-id="CE">CE</td>
+                <td class="main-body-item" data-id="C">C</td>
+                <td class="main-body-item" data-id="backspace">&#9003;</td>
             </tr>
             <tr>
-                <td class="number" data-id='7'>7</td>
-                <td class="number" data-id="8">8</td>
-                <td class="number" data-id="9">9</td>
-                <td class="operation" data-id="*">&times;</td>
+                <td class="main-body-item" data-id="1/x">1/<em>x</em></td>
+                <td class="main-body-item" data-id="squared"><em>x</em>&sup2;</td>
+                <td class="main-body-item" data-id="square-root">&#8730;</td>
+                <td class="operation main-body-item" data-id="/">&#247;</td>
             </tr>
             <tr>
-                <td class="number" data-id="4">4</td>
-                <td class="number" data-id="5">5</td>
-                <td class="number" data-id="6">6</td>
-                <td class="operation" data-id="-">&minus;</td>
+                <td class="number main-body-item" data-id='7'>7</td>
+                <td class="number main-body-item" data-id="8">8</td>
+                <td class="number main-body-item" data-id="9">9</td>
+                <td class="operation main-body-item" data-id="*">&times;</td>
             </tr>
             <tr>
-                <td class="number" data-id="1">1</td>
-                <td class="number" data-id="2">2</td>
-                <td class="number" data-id="3">3</td>
-                <td class="operation" data-id="+">+</td>
+                <td class="number main-body-item" data-id="4">4</td>
+                <td class="number main-body-item" data-id="5">5</td>
+                <td class="number main-body-item" data-id="6">6</td>
+                <td class="operation main-body-item" data-id="-">&minus;</td>
             </tr>
             <tr>
-                <td data-id="+/-">+/-</td>
-                <td class="number" data-id="0">0</td>
-                <td data-id=".">.</td>
-                <td data-id="=">=</td>
+                <td class="number main-body-item" data-id="1">1</td>
+                <td class="number main-body-item" data-id="2">2</td>
+                <td class="number main-body-item" data-id="3">3</td>
+                <td class="operation main-body-item" data-id="+">+</td>
+            </tr>
+            <tr>
+                <td class="main-body-item" data-id="+/-">+/-</td>
+                <td class="number main-body-item" data-id="0">0</td>
+                <td class="main-body-item" data-id=".">.</td>
+                <td class="main-body-item" data-id="=">=</td>
             </tr>
         </tbody>
     </table>
