README.md and Keypress Functionality Added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <td id="prev-screen" colspan="4" class="prev-screen head-history"></td>
             </tr>
             <tr>
-                <td id="screen" colspan="4" class="screen head-history"></td>
+                <td id="screen" colspan="4" class="screen text-nowrap head-history"></td>
             </tr>
         </thead>
         
